header overflow correction

--- a/LandingPage.css
+++ b/LandingPage.css
@@ -4,6 +4,7 @@ body{
 
 padding: 0;
 
+  overflow-x: hidden;
 
   font-family: 'Montserrat', sans-serif;
   }
